# monotonic_solver

./: Cargo.toml  LICENSE  README.md
examples/: drama.rs  groceries.rs  hats.rs
src/: lib.rs
